[package]
name = "tc"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "tc"
path = "components/cli/src/main.rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
clap = { version = "4.1", features = ["derive"] }
colored = "2.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.71"
config-file = "0.2.3"
kit =  { path = "components/kit" }
git =  { path = "components/git" }
aws =  { path = "components/aws" }
libtc =  { path = "components/lib" }

[dev-dependencies]
mockall = "0.12.1"

[workspace]
members = [
   "components/kit",
   "components/git",
   "components/aws",
   "components/lib"
]

[profile.release]
opt-level = 's'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true
strip = true
