[package]
name = "aws"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1.1.2"
aws-sdk-apigateway = { version = "1.15.0", features = ["behavior-version-latest"] }
aws-sdk-apigatewayv2 = { version = "1.15.0", features = ["behavior-version-latest"] }
aws-sdk-cloudwatchlogs = { version = "1.15.0", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { version = "1.15.0", features = ["behavior-version-latest"] }
aws-sdk-ec2 = { version = "1.15.0", features = ["behavior-version-latest"] }
aws-sdk-efs = { version = "1.15.0", features = ["behavior-version-latest"] }
aws-sdk-eventbridge = { version = "1.15.0", features = ["behavior-version-latest"] }
aws-sdk-iam = { version = "1.15.0", features = ["behavior-version-latest"] }
aws-sdk-lambda = { version = "1.15.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.15.0", features = ["behavior-version-latest"] }
aws-sdk-sfn = { version = "1.15.0", features = ["behavior-version-latest"] }
aws-sdk-appsync = { version = "1.15.0", features = ["behavior-version-latest"] }
aws-sdk-ssm = { version = "1.15.0", features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "1.15.0", features = ["behavior-version-latest"] }
aws-sdk-ecs = { version = "1.15.0", features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1.15.0", features = ["behavior-version-latest"] }
aws-sdk-scheduler = { version = "1.15.0", features = ["behavior-version-latest"] }
aws-smithy-http = "0.60.0"
aws-smithy-types = "1.0.1"
aws-types = "1.0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
log = "0.4"
lazy_static = "1.4.0"
open = "5.0.0"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
serde = "1.0"
serde_derive = "1.0"
async-trait = "0.1.77"
colored = "2.0.0"
tabled = "0.10.0"
base64 = "0.21.0"
cacache = "13.0.0"
kit = { path = "../kit" }
