[package]
name = "cli"
version = "0.7.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
colored = "2.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
libtc =  { path = "../lib" }
kit =  { path = "../kit" }
