[package]
name = "kit"
version = "0.0.1"
edition = "2021"

[dependencies]
base64 = "0.21.0"
chrono = "0.4.24"
colored = "2.0.0"
colored_json = "3.1.0"
convert_case = "0.6.0"
human_bytes = "0.4.2"
itertools = "0.10.5"
ms-converter = "1.4.0"
path-absolutize = "3.1.1"
serde = "1.0"
serde_json = "1.0"
shellexpand = "1.0.0"
subprocess = "0.2.9"
tabled = "0.10.0"
text_placeholder = "0.5.0"
reqwest = "0.11.18"
uuid = { version = "1.4.1", features = ["v4"] }
floating-duration = "0.1.2"
indicatif = "0.17.7"
env_logger = "0.9"
tracing = "0.1.37"
ansi-escapes = "0.1.1"
ptree = "0.4.0"

[dependencies.tracing-subscriber]
version = "0.3.15"
features = ["env-filter"]
