[package]
name = "libtc"
version = "0.7.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
colored_json = "3.1.0"
console = "0.15.8"
futures = "0.3"
glob = "0.3.1"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4"
open = "5.0.0"
openssl = { version = "0.10", features = ["vendored"] }
ptree = "0.4.0"
rustyline = "12.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.25"
error-chain = "0.12.4"
tabled = "0.10.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.8"
walkdir = "2"
anyhow = "1.0.71"
derivative = "2.2.0"
kit =  { path = "../kit" }
git =  { path = "../git" }
aws =  { path = "../aws" }

[dev-dependencies]
mockall = "0.12.1"

[lib]
name = "libtc"
path = "src/lib.rs"