[tool.poetry]
name = "bar"
version = "0.1.0"
description = ""
authors = ["bar <foo@bar.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aws-lambda-powertools = "^2.17.0"
honeybadger = "0.15.2"
psycopg2-binary = "^2.9.6"
simplejson = "^3.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
